--- a/Movie_Booking/sections/landing_page.html
+++ b/Movie_Booking/sections/landing_page.html
@@ -66,71 +66,9 @@
     </div>
   </div>
 
-  <!-- Script -->
-  <script>
-    // Tab switching
-    document.querySelectorAll('.tab-btn').forEach(button => {
-      button.addEventListener('click', () => {
-        document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('active'));
-        button.classList.add('active');
-
-        const authTitle = document.querySelector('.auth-title');
-        const authSubtitle = document.querySelector('.auth-subtitle');
-        const formButton = document.querySelector('.form-button');
-
-        if (button.textContent === 'Daftar') {
-          authTitle.textContent = 'Daftar Akun Baru';
-          authSubtitle.textContent = 'Buat akun untuk mulai memesan tiket';
-          formButton.textContent = 'Daftar';
-        } else {
-          authTitle.textContent = 'Masuk ke Akun';
-          authSubtitle.textContent = 'Masukkan username dan password Anda';
-          formButton.textContent = 'Masuk';
-        }
-      });
-    });
-
-    // Register & Login logic
-    const form = document.querySelector('form');
-    const formButton = document.querySelector('.form-button');
-
-    function registerUser(username, password) {
-      if (localStorage.getItem(username)) {
-        alert('Username sudah terdaftar!');
-      } else {
-        localStorage.setItem(username, password);
-        alert('Pendaftaran berhasil! Silakan login.');
-      }
-    }
-
-    function loginUser(username, password) {
-      const storedPassword = localStorage.getItem(username);
-      if (storedPassword === password) {
-        alert('Login berhasil!');
-        // Redirect ke halaman utama (jika ada)
-      } else {
-        alert('Username atau password salah!');
-      }
-    }
-
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const username = form.querySelector('input[type="text"]').value.trim();
-      const password = form.querySelector('input[type="password"]').value.trim();
-
-      if (!username || !password) {
-        alert('Semua kolom wajib diisi!');
-        return;
-      }
-
-      if (formButton.textContent === 'Daftar') {
-        registerUser(username, password);
-      } else {
-        loginUser(username, password);
-      }
-
-      form.reset();
-    });
-  </script>
+  <!-- Scripts -->
+  <script src="../scripts/login.js"></script>
+  <script src="../scripts/register.js"></script>
+  <script src="../scripts/UI.js"></script>
 </body>
 </html>
