Re-styling the whole page and add additional functionalities

--- a/Movie_Booking/sections/home.html
+++ b/Movie_Booking/sections/home.html
@@ -5,130 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CinemaBook - Home</title>
   <link rel="stylesheet" href="../styles/style.css" />
-  <style>
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: #1a1a2e;
-      padding: 15px 30px;
-      color: white;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .navbar-logo {
-      display: flex;
-      align-items: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-    .navbar-logo span {
-      margin-right: 8px;
-    }
-    .navbar-user {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .user-icon {
-      background-color: #e94560;
-      width: 35px;
-      height: 35px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-    }
-    .logout-btn {
-      background-color: #e94560;
-      border: none;
-      color: white;
-      padding: 7px 15px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s;
-    }
-    .logout-btn:hover {
-      background-color: #d13354;
-    }
-    .main-content {
-      padding: 30px;
-    }
-    .section-title {
-      margin-bottom: 20px;
-      color: #1a1a2e;
-      font-size: 1.8rem;
-    }
-    .movie-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 25px;
-      margin-bottom: 40px;
-    }
-    .movie-card {
-      background-color: white;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s, box-shadow 0.3s;
-      cursor: pointer;
-    }
-    .movie-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 15px rgba(0,0,0,0.15);
-    }
-    .movie-poster {
-      height: 250px;
-      background-color: #ddd;
-      background-size: cover;
-      background-position: center;
-    }
-    .movie-info {
-      padding: 15px;
-    }
-    .movie-title {
-      color: #666;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-    .movie-genre {
-      color: #666;
-      font-size: 0.9rem;
-      margin-bottom: 8px;
-    }
-    .movie-rating {
-      display: flex;
-      align-items: center;
-    }
-    .rating-star {
-      color: #ffc107;
-      margin-right: 5px;
-    }
-  </style>
-  <script>
-    // Fungsi untuk menyimpan film yang dipilih dan redirect ke pilih_kursi.html
-    function pilihFilm(namaFilm) {
-      localStorage.setItem('filmDipilih', namaFilm);
-      window.location.href = 'pilih_kursi.html';
-    }
-  </script>
 </head>
 <body>
-  <div class="container">
-    <!-- Navbar dengan nama user -->
-    <div class="navbar">
-      <div class="navbar-logo">
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <div class="nav-logo">
         <span class="logo-icon">🎬</span>
         CinemaBook
       </div>
       <div class="navbar-user">
         <div class="user-icon" id="userInitial">U</div>
         <div class="username" id="usernameDisplay">Username</div>
-        <button class="logout-btn" id="logoutBtn">Logout</button>
+        <button class="logout-btn" id="logoutBtn" onclick="handleLogout()">Logout</button>
       </div>
     </div>
+  </nav>
 
+  <div class="container">
     <!-- Main content -->
     <div class="main-content">
       <h2 class="section-title">Film Yang Sedang Tayang</h2>
@@ -207,6 +101,5 @@
 
   <!-- Scripts -->
   <script src="../scripts/logout.js"></script>
-  <script src="../scripts/home.js"></script>
 </body>
 </html>
