--- a/Movie_Booking/sections/home.html
+++ b/Movie_Booking/sections/home.html
@@ -100,6 +100,9 @@
   </div>
 
   <!-- Scripts -->
+  <script src="../scripts/SessionManager.js"></script>
+  <script src="../scripts/MovieManager.js"></script>
+  <script src="../scripts/NotificationManager.js"></script>
   <script src="../scripts/logout.js"></script>
 </body>
 </html>
