--- a/Movie_Booking/sections/login.html
+++ b/Movie_Booking/sections/login.html
@@ -1,80 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - CinemaBook</title>
-  <link rel="stylesheet" href="../styles/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - CinemaBook</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="nav-logo">
-        <span class="logo-icon">🎬</span>
-        CinemaBook
-      </div>
-      <ul class="nav-menu">
-        <li class="nav-item">
-          <a href="landing_page.html" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="#film" class="nav-link">Film</a>
-        </li>
-        <li class="nav-item">
-          <a href="#jadwal" class="nav-link">Jadwal</a>
-        </li>
-        <li class="nav-item">
-          <a href="login.html" class="nav-link active">Login</a>
-        </li>
-        <li class="nav-item">
-          <a href="register.html" class="nav-link">Register</a>
-        </li>
-      </ul>
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container">
-    <!-- Login Section -->
-    <div class="auth-container">
-      <div class="auth-form">
-        <h2 class="auth-title">Masuk ke Akun</h2>
-        <p class="auth-subtitle">Masukkan username/email dan password Anda</p>
-
-        <form id="loginForm">
-          <div class="form-group">
-            <label class="form-label">Username / Email</label>
-            <input type="text" class="form-input" id="loginUsername" placeholder="Masukkan Username atau Email" required />
-          </div>
-
-          <div class="form-group">
-            <label class="form-label">Password</label>
-            <input type="password" class="form-input" id="loginPassword" placeholder="Masukkan Password" required />
-          </div>
-
-          <button type="submit" class="form-button">Masuk</button>
-        </form>
-
-        <div style="text-align: center; margin-top: 20px;">
-          <p style="font-size: 14px; opacity: 0.8;">
-            Belum punya akun? 
-            <a href="register.html" style="color: #ffc107; text-decoration: none;">Daftar di sini</a>
-          </p>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <span class="logo-icon">🎬</span>
+                CinemaBook
+            </div>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="landing_page.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#film" class="nav-link">Film</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#jadwal" class="nav-link">Jadwal</a>
+                </li>
+                <li class="nav-item">
+                    <a href="login.html" class="nav-link active">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="register.html" class="nav-link">Register</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
+    </nav>
 
-  <!-- Scripts -->
-  <script src="../scripts/login.js"></script>
-  <script src="../scripts/navbar.js"></script>
+    <div class="container">
+        <!-- Login Section -->
+        <div class="auth-container">
+            <div class="auth-form">
+                <h2 class="auth-title">Masuk ke Akun</h2>
+                <p class="auth-subtitle">Masukkan username/email dan password Anda</p>
+
+                <!-- Form dengan class yang sesuai dengan CSS -->
+                <form id="loginForm">
+                    <div class="form-group">
+                        <label class="form-label" for="loginUsername">Username atau Email</label>
+                        <input type="text" id="loginUsername" name="username" class="form-input"
+                            placeholder="Masukkan username atau email" required>
+                        <!-- Container untuk validation icon -->
+                        <div class="validation-icon"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="loginPassword">Password</label>
+                        <input type="password" id="loginPassword" name="password" class="form-input"
+                            placeholder="Masukkan password" required>
+                        <!-- Container untuk validation icon -->
+                        <div class="validation-icon"></div>
+                    </div>
+
+                    <button type="submit" class="form-button">Masuk</button>
+                </form>
+
+                <div style="text-align: center; margin-top: 20px;">
+                    <p style="font-size: 14px; opacity: 0.8;">
+                        Belum punya akun?
+                        <a href="register.html" style="color: #ffc107; text-decoration: none;">Daftar di sini</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Scripts dengan urutan yang benar -->
+    <script src="../scripts/securityManager.js"></script>
+    <script src="../scripts/SessionManager.js"></script>
+    <script src="../scripts/NotificationManager.js"></script>
+    <script src="../scripts/login.js"></script>
 </body>
 
 </html>
